# dns-relay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log.h  main.cpp  makefile  port.sh  standard.hpp
inc/: cache.h  color_output.hpp  dns.h  file.hpp  id_gen.h  log.h  server.h  socket.h  socket_io.cpp  socket_io.h  standard.hpp  static_map.h  thread_pool.h
src/: cache.cpp  dns.cpp  id_gen.cpp  log.cpp  main.cpp  server.cpp  socket.cpp  socket_io.cpp  static_map.cpp  thread_pool.cpp
